qt/multimedia/gen_qaudioinput.h

class QAudioDeviceInfo;
class QAudioFormat;
class QAudioInput;
class QIODevice;
class QMetaObject;
class QObject;
typedef struct QAudioDeviceInfo QAudioDeviceInfo;
typedef struct QAudioFormat QAudioFormat;
typedef struct QAudioInput QAudioInput;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QIODevice QIODevice;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
QAudioInput* QAudioInput_new();
QAudioInput* QAudioInput_new2(QAudioDeviceInfo* audioDeviceInfo);
QAudioInput* QAudioInput_new3(QAudioFormat* format);
QAudioInput* QAudioInput_new4(QAudioFormat* format, QObject* parent);
QAudioInput* QAudioInput_new5(QAudioDeviceInfo* audioDeviceInfo, QAudioFormat* format);
QAudioInput* QAudioInput_new6(QAudioDeviceInfo* audioDeviceInfo, QAudioFormat* format, QObject* parent);
QMetaObject* QAudioInput_metaObject(const QAudioInput* self);
void* QAudioInput_metacast(QAudioInput* self, const char* param1);
int QAudioInput_metacall(QAudioInput* self, int param1, int param2, void** param3);
struct miqt_string QAudioInput_tr(const char* s);
struct miqt_string QAudioInput_trUtf8(const char* s);
QAudioFormat* QAudioInput_format(const QAudioInput* self);
void QAudioInput_start(QAudioInput* self, QIODevice* device);
QIODevice* QAudioInput_start2(QAudioInput* self);
void QAudioInput_stop(QAudioInput* self);
void QAudioInput_reset(QAudioInput* self);
void QAudioInput_suspend(QAudioInput* self);
void QAudioInput_resume(QAudioInput* self);
void QAudioInput_setBufferSize(QAudioInput* self, int bytes);
int QAudioInput_bufferSize(const QAudioInput* self);
int QAudioInput_bytesReady(const QAudioInput* self);
int QAudioInput_periodSize(const QAudioInput* self);
void QAudioInput_setNotifyInterval(QAudioInput* self, int milliSeconds);
int QAudioInput_notifyInterval(const QAudioInput* self);
void QAudioInput_setVolume(QAudioInput* self, double volume);
double QAudioInput_volume(const QAudioInput* self);
long long QAudioInput_processedUSecs(const QAudioInput* self);
long long QAudioInput_elapsedUSecs(const QAudioInput* self);
int QAudioInput_error(const QAudioInput* self);
int QAudioInput_state(const QAudioInput* self);
void QAudioInput_stateChanged(QAudioInput* self, int state);
void QAudioInput_connect_stateChanged(QAudioInput* self, intptr_t slot);
void QAudioInput_notify(QAudioInput* self);
void QAudioInput_connect_notify(QAudioInput* self, intptr_t slot);
struct miqt_string QAudioInput_tr2(const char* s, const char* c);
struct miqt_string QAudioInput_tr3(const char* s, const char* c, int n);
struct miqt_string QAudioInput_trUtf82(const char* s, const char* c);
struct miqt_string QAudioInput_trUtf83(const char* s, const char* c, int n);
bool QAudioInput_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QAudioInput_virtualbase_metaObject(const void* self);
bool QAudioInput_override_virtual_metacast(void* self, intptr_t slot);
void* QAudioInput_virtualbase_metacast(void* self, const char* param1);
bool QAudioInput_override_virtual_metacall(void* self, intptr_t slot);
int QAudioInput_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QAudioInput_override_virtual_event(void* self, intptr_t slot);
bool QAudioInput_virtualbase_event(void* self, QEvent* event);
bool QAudioInput_override_virtual_eventFilter(void* self, intptr_t slot);
bool QAudioInput_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QAudioInput_override_virtual_timerEvent(void* self, intptr_t slot);
void QAudioInput_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QAudioInput_override_virtual_childEvent(void* self, intptr_t slot);
void QAudioInput_virtualbase_childEvent(void* self, QChildEvent* event);
bool QAudioInput_override_virtual_customEvent(void* self, intptr_t slot);
void QAudioInput_virtualbase_customEvent(void* self, QEvent* event);
bool QAudioInput_override_virtual_connectNotify(void* self, intptr_t slot);
void QAudioInput_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QAudioInput_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QAudioInput_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QAudioInput_staticMetaObject();
void QAudioInput_delete(QAudioInput* self);